// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`appview thread views > fetches ancestors 1`] = `
{
  "$type": "app.bsky.feed.defs#threadViewPost",
  "parent": {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "parent": {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": {
        "author": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "labels": [
            {
              "cid": "cids(2)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(0)",
              "uri": "record(3)",
              "val": "self-label-a",
            },
            {
              "cid": "cids(2)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(0)",
              "uri": "record(3)",
              "val": "self-label-b",
            },
          ],
          "viewer": {
            "blockedBy": false,
            "followedBy": "record(2)",
            "following": "record(1)",
            "muted": false,
          },
        },
        "bookmarkCount": 0,
        "cid": "cids(3)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "likeCount": 3,
        "quoteCount": 0,
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(4)",
        "viewer": {
          "bookmarked": false,
          "embeddingDisabled": false,
          "like": "record(7)",
          "threadMuted": false,
        },
      },
      "threadContext": {},
    },
    "post": {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(2)",
        "displayName": "bobby",
        "handle": "bob.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(4)",
      "embed": {
        "$type": "app.bsky.embed.images#view",
        "images": [
          {
            "alt": "../dev-env/assets/key-landscape-small.jpg",
            "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(3)/cids(5)",
            "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(3)/cids(5)",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(4)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "did:example:labeler",
          "uri": "record(5)",
          "val": "test-label",
        },
        {
          "cid": "cids(4)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "did:example:labeler",
          "uri": "record(5)",
          "val": "test-label-2",
        },
      ],
      "likeCount": 1,
      "quoteCount": 0,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": {
          "$type": "app.bsky.embed.images",
          "images": [
            {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "image": {
                "$type": "blob",
                "mimeType": "image/jpeg",
                "ref": {
                  "$link": "cids(5)",
                },
                "size": 4114,
              },
            },
          ],
        },
        "reply": {
          "parent": {
            "cid": "cids(3)",
            "uri": "record(4)",
          },
          "root": {
            "cid": "cids(3)",
            "uri": "record(4)",
          },
        },
        "text": "hear that label_me label_me_2",
      },
      "replyCount": 1,
      "repostCount": 0,
      "uri": "record(5)",
      "viewer": {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    "threadContext": {
      "rootAuthorLike": "record(8)",
    },
  },
  "post": {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 1,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": {
        "parent": {
          "cid": "cids(4)",
          "uri": "record(5)",
        },
        "root": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 2,
    "uri": "record(0)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "repost": "record(6)",
      "threadMuted": false,
    },
  },
  "replies": [],
  "threadContext": {
    "rootAuthorLike": "record(9)",
  },
}
`;

exports[`appview thread views > fetches deep post thread 1`] = `
{
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 3,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "like": "record(4)",
      "threadMuted": false,
    },
  },
  "replies": [
    {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": {
        "author": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "did": "user(2)",
          "handle": "carol.test",
          "labels": [],
          "viewer": {
            "blockedBy": false,
            "following": "record(6)",
            "muted": false,
          },
        },
        "bookmarkCount": 0,
        "cid": "cids(3)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "likeCount": 1,
        "quoteCount": 0,
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(5)",
        "viewer": {
          "bookmarked": false,
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "replies": [],
      "threadContext": {
        "rootAuthorLike": "record(7)",
      },
    },
    {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": {
        "author": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(1)",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "did": "user(3)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": [],
          "viewer": {
            "blockedBy": false,
            "muted": false,
          },
        },
        "bookmarkCount": 0,
        "cid": "cids(4)",
        "embed": {
          "$type": "app.bsky.embed.images#view",
          "images": [
            {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(4)/cids(5)",
              "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(4)/cids(5)",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(4)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "did:example:labeler",
            "uri": "record(8)",
            "val": "test-label",
          },
          {
            "cid": "cids(4)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "did:example:labeler",
            "uri": "record(8)",
            "val": "test-label-2",
          },
        ],
        "likeCount": 1,
        "quoteCount": 0,
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": {
            "$type": "app.bsky.embed.images",
            "images": [
              {
                "alt": "../dev-env/assets/key-landscape-small.jpg",
                "image": {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": {
                    "$link": "cids(5)",
                  },
                  "size": 4114,
                },
              },
            ],
          },
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that label_me label_me_2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(8)",
        "viewer": {
          "bookmarked": false,
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "replies": [
        {
          "$type": "app.bsky.feed.defs#threadViewPost",
          "post": {
            "author": {
              "associated": {
                "activitySubscription": {
                  "allowSubscriptions": "followers",
                },
              },
              "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "labels": [
                {
                  "cid": "cids(2)",
                  "cts": "1970-01-01T00:00:00.000Z",
                  "src": "user(0)",
                  "uri": "record(3)",
                  "val": "self-label-a",
                },
                {
                  "cid": "cids(2)",
                  "cts": "1970-01-01T00:00:00.000Z",
                  "src": "user(0)",
                  "uri": "record(3)",
                  "val": "self-label-b",
                },
              ],
              "viewer": {
                "blockedBy": false,
                "followedBy": "record(2)",
                "following": "record(1)",
                "muted": false,
              },
            },
            "bookmarkCount": 0,
            "cid": "cids(6)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": [],
            "likeCount": 1,
            "quoteCount": 0,
            "record": {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": {
                "parent": {
                  "cid": "cids(4)",
                  "uri": "record(8)",
                },
                "root": {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "thanks bob",
            },
            "replyCount": 0,
            "repostCount": 2,
            "uri": "record(9)",
            "viewer": {
              "bookmarked": false,
              "embeddingDisabled": false,
              "repost": "record(10)",
              "threadMuted": false,
            },
          },
          "replies": [],
          "threadContext": {
            "rootAuthorLike": "record(11)",
          },
        },
      ],
      "threadContext": {
        "rootAuthorLike": "record(12)",
      },
    },
  ],
  "threadContext": {},
}
`;

exports[`appview thread views > fetches shallow post thread 1`] = `
{
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 3,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "like": "record(4)",
      "threadMuted": false,
    },
  },
  "replies": [
    {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": {
        "author": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "did": "user(2)",
          "handle": "carol.test",
          "labels": [],
          "viewer": {
            "blockedBy": false,
            "following": "record(6)",
            "muted": false,
          },
        },
        "bookmarkCount": 0,
        "cid": "cids(3)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "likeCount": 1,
        "quoteCount": 0,
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(5)",
        "viewer": {
          "bookmarked": false,
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "threadContext": {
        "rootAuthorLike": "record(7)",
      },
    },
    {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": {
        "author": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(1)",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "did": "user(3)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": [],
          "viewer": {
            "blockedBy": false,
            "muted": false,
          },
        },
        "bookmarkCount": 0,
        "cid": "cids(4)",
        "embed": {
          "$type": "app.bsky.embed.images#view",
          "images": [
            {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(4)/cids(5)",
              "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(4)/cids(5)",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(4)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "did:example:labeler",
            "uri": "record(8)",
            "val": "test-label",
          },
          {
            "cid": "cids(4)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "did:example:labeler",
            "uri": "record(8)",
            "val": "test-label-2",
          },
        ],
        "likeCount": 1,
        "quoteCount": 0,
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": {
            "$type": "app.bsky.embed.images",
            "images": [
              {
                "alt": "../dev-env/assets/key-landscape-small.jpg",
                "image": {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": {
                    "$link": "cids(5)",
                  },
                  "size": 4114,
                },
              },
            ],
          },
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that label_me label_me_2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(8)",
        "viewer": {
          "bookmarked": false,
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "threadContext": {
        "rootAuthorLike": "record(9)",
      },
    },
  ],
  "threadContext": {},
}
`;

exports[`appview thread views > fetches thread with handle in uri 1`] = `
{
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 3,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "like": "record(4)",
      "threadMuted": false,
    },
  },
  "replies": [
    {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": {
        "author": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "did": "user(2)",
          "handle": "carol.test",
          "labels": [],
          "viewer": {
            "blockedBy": false,
            "following": "record(6)",
            "muted": false,
          },
        },
        "bookmarkCount": 0,
        "cid": "cids(3)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "likeCount": 1,
        "quoteCount": 0,
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(5)",
        "viewer": {
          "bookmarked": false,
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "threadContext": {
        "rootAuthorLike": "record(7)",
      },
    },
    {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": {
        "author": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(1)",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "did": "user(3)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": [],
          "viewer": {
            "blockedBy": false,
            "muted": false,
          },
        },
        "bookmarkCount": 0,
        "cid": "cids(4)",
        "embed": {
          "$type": "app.bsky.embed.images#view",
          "images": [
            {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(4)/cids(5)",
              "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(4)/cids(5)",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(4)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "did:example:labeler",
            "uri": "record(8)",
            "val": "test-label",
          },
          {
            "cid": "cids(4)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "did:example:labeler",
            "uri": "record(8)",
            "val": "test-label-2",
          },
        ],
        "likeCount": 1,
        "quoteCount": 0,
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": {
            "$type": "app.bsky.embed.images",
            "images": [
              {
                "alt": "../dev-env/assets/key-landscape-small.jpg",
                "image": {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": {
                    "$link": "cids(5)",
                  },
                  "size": 4114,
                },
              },
            ],
          },
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that label_me label_me_2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(8)",
        "viewer": {
          "bookmarked": false,
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "threadContext": {
        "rootAuthorLike": "record(9)",
      },
    },
  ],
  "threadContext": {},
}
`;

exports[`appview thread views > handles deleted posts correctly 1`] = `
{
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 0,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "Deletion thread",
    },
    "replyCount": 1,
    "repostCount": 0,
    "uri": "record(0)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "threadMuted": false,
    },
  },
  "replies": [
    {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": {
        "author": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(1)",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "did": "user(2)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": [],
          "viewer": {
            "blockedBy": false,
            "muted": false,
          },
        },
        "bookmarkCount": 0,
        "cid": "cids(3)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "Reply",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(4)",
        "viewer": {
          "bookmarked": false,
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "replies": [
        {
          "$type": "app.bsky.feed.defs#threadViewPost",
          "post": {
            "author": {
              "associated": {
                "activitySubscription": {
                  "allowSubscriptions": "followers",
                },
              },
              "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "labels": [
                {
                  "cid": "cids(2)",
                  "cts": "1970-01-01T00:00:00.000Z",
                  "src": "user(0)",
                  "uri": "record(3)",
                  "val": "self-label-a",
                },
                {
                  "cid": "cids(2)",
                  "cts": "1970-01-01T00:00:00.000Z",
                  "src": "user(0)",
                  "uri": "record(3)",
                  "val": "self-label-b",
                },
              ],
              "viewer": {
                "blockedBy": false,
                "followedBy": "record(2)",
                "following": "record(1)",
                "muted": false,
              },
            },
            "bookmarkCount": 0,
            "cid": "cids(4)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": [],
            "likeCount": 0,
            "quoteCount": 0,
            "record": {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": {
                "parent": {
                  "cid": "cids(3)",
                  "uri": "record(4)",
                },
                "root": {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "Reply reply",
            },
            "replyCount": 0,
            "repostCount": 0,
            "uri": "record(5)",
            "viewer": {
              "bookmarked": false,
              "embeddingDisabled": false,
              "threadMuted": false,
            },
          },
          "replies": [],
          "threadContext": {},
        },
      ],
      "threadContext": {},
    },
  ],
  "threadContext": {},
}
`;

exports[`appview thread views > handles deleted posts correctly 2`] = `
{
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 0,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "Deletion thread",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(0)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "threadMuted": false,
    },
  },
  "replies": [],
  "threadContext": {},
}
`;

exports[`appview thread views > handles deleted posts correctly 3`] = `
{
  "$type": "app.bsky.feed.defs#threadViewPost",
  "parent": {
    "$type": "app.bsky.feed.defs#notFoundPost",
    "notFound": true,
    "uri": "record(5)",
  },
  "post": {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 0,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": {
        "parent": {
          "cid": "cids(4)",
          "uri": "record(5)",
        },
        "root": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
      },
      "text": "Reply reply",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(0)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "threadMuted": false,
    },
  },
  "replies": [],
  "threadContext": {},
}
`;

exports[`appview thread views > listblock > doesn't apply listblock if list was taken down by private takedown 1`] = `
{
  "$type": "app.bsky.feed.defs#blockedPost",
  "author": {
    "did": "user(0)",
    "viewer": {
      "blockedBy": true,
    },
  },
  "blocked": true,
  "uri": "record(0)",
}
`;

exports[`appview thread views > listblock > doesn't apply listblock if list was taken down by private takedown 2`] = `
{
  "$type": "app.bsky.feed.defs#threadViewPost",
  "parent": {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "post": {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(2)",
        "handle": "carol.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(2)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 0,
      "quoteCount": 0,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "I'm carol",
      },
      "replyCount": 1,
      "repostCount": 0,
      "uri": "record(2)",
      "viewer": {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    "threadContext": {},
  },
  "post": {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(1)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 0,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": {
        "parent": {
          "cid": "cids(2)",
          "uri": "record(2)",
        },
        "root": {
          "cid": "cids(2)",
          "uri": "record(2)",
        },
      },
      "text": "hi carol",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(0)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "threadMuted": false,
    },
  },
  "replies": [],
  "threadContext": {},
}
`;

exports[`appview thread views > listblock > doesn't apply listblock if list was taken down by takedown label 1`] = `
{
  "$type": "app.bsky.feed.defs#blockedPost",
  "author": {
    "did": "user(0)",
    "viewer": {
      "blockedBy": true,
    },
  },
  "blocked": true,
  "uri": "record(0)",
}
`;

exports[`appview thread views > listblock > doesn't apply listblock if list was taken down by takedown label 2`] = `
{
  "$type": "app.bsky.feed.defs#threadViewPost",
  "parent": {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "post": {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(2)",
        "handle": "carol.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(2)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 0,
      "quoteCount": 0,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "I'm carol",
      },
      "replyCount": 1,
      "repostCount": 0,
      "uri": "record(2)",
      "viewer": {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    "threadContext": {},
  },
  "post": {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(1)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 0,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": {
        "parent": {
          "cid": "cids(2)",
          "uri": "record(2)",
        },
        "root": {
          "cid": "cids(2)",
          "uri": "record(2)",
        },
      },
      "text": "hi carol",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(0)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "threadMuted": false,
    },
  },
  "replies": [],
  "threadContext": {},
}
`;

exports[`appview thread views > takedown > blocks ancestors by actor 1`] = `
{
  "$type": "app.bsky.feed.defs#threadViewPost",
  "parent": {
    "$type": "app.bsky.feed.defs#notFoundPost",
    "notFound": true,
    "uri": "record(5)",
  },
  "post": {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 1,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": {
        "parent": {
          "cid": "cids(4)",
          "uri": "record(5)",
        },
        "root": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 2,
    "uri": "record(0)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "repost": "record(6)",
      "threadMuted": false,
    },
  },
  "replies": [],
  "threadContext": {
    "rootAuthorLike": "record(7)",
  },
}
`;

exports[`appview thread views > takedown > blocks ancestors by record 1`] = `
{
  "$type": "app.bsky.feed.defs#threadViewPost",
  "parent": {
    "$type": "app.bsky.feed.defs#notFoundPost",
    "notFound": true,
    "uri": "record(5)",
  },
  "post": {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 1,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": {
        "parent": {
          "cid": "cids(4)",
          "uri": "record(5)",
        },
        "root": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 2,
    "uri": "record(0)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "repost": "record(6)",
      "threadMuted": false,
    },
  },
  "replies": [],
  "threadContext": {
    "rootAuthorLike": "record(7)",
  },
}
`;

exports[`appview thread views > takedown > blocks replies by actor 1`] = `
{
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 3,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "like": "record(4)",
      "threadMuted": false,
    },
  },
  "replies": [
    {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": {
        "author": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(1)",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "did": "user(2)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": [],
          "viewer": {
            "blockedBy": false,
            "muted": false,
          },
        },
        "bookmarkCount": 0,
        "cid": "cids(3)",
        "embed": {
          "$type": "app.bsky.embed.images#view",
          "images": [
            {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(3)/cids(4)",
              "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(3)/cids(4)",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(3)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "did:example:labeler",
            "uri": "record(5)",
            "val": "test-label",
          },
          {
            "cid": "cids(3)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "did:example:labeler",
            "uri": "record(5)",
            "val": "test-label-2",
          },
        ],
        "likeCount": 1,
        "quoteCount": 0,
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": {
            "$type": "app.bsky.embed.images",
            "images": [
              {
                "alt": "../dev-env/assets/key-landscape-small.jpg",
                "image": {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": {
                    "$link": "cids(4)",
                  },
                  "size": 4114,
                },
              },
            ],
          },
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that label_me label_me_2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(5)",
        "viewer": {
          "bookmarked": false,
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "replies": [
        {
          "$type": "app.bsky.feed.defs#threadViewPost",
          "post": {
            "author": {
              "associated": {
                "activitySubscription": {
                  "allowSubscriptions": "followers",
                },
              },
              "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "labels": [
                {
                  "cid": "cids(2)",
                  "cts": "1970-01-01T00:00:00.000Z",
                  "src": "user(0)",
                  "uri": "record(3)",
                  "val": "self-label-a",
                },
                {
                  "cid": "cids(2)",
                  "cts": "1970-01-01T00:00:00.000Z",
                  "src": "user(0)",
                  "uri": "record(3)",
                  "val": "self-label-b",
                },
              ],
              "viewer": {
                "blockedBy": false,
                "followedBy": "record(2)",
                "following": "record(1)",
                "muted": false,
              },
            },
            "bookmarkCount": 0,
            "cid": "cids(5)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": [],
            "likeCount": 1,
            "quoteCount": 0,
            "record": {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": {
                "parent": {
                  "cid": "cids(3)",
                  "uri": "record(5)",
                },
                "root": {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "thanks bob",
            },
            "replyCount": 0,
            "repostCount": 2,
            "uri": "record(6)",
            "viewer": {
              "bookmarked": false,
              "embeddingDisabled": false,
              "repost": "record(7)",
              "threadMuted": false,
            },
          },
          "replies": [],
          "threadContext": {
            "rootAuthorLike": "record(8)",
          },
        },
      ],
      "threadContext": {
        "rootAuthorLike": "record(9)",
      },
    },
  ],
  "threadContext": {},
}
`;

exports[`appview thread views > takedown > blocks replies by record 1`] = `
{
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 3,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "like": "record(4)",
      "threadMuted": false,
    },
  },
  "replies": [
    {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": {
        "author": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(1)",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "did": "user(2)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": [],
          "viewer": {
            "blockedBy": false,
            "muted": false,
          },
        },
        "bookmarkCount": 0,
        "cid": "cids(3)",
        "embed": {
          "$type": "app.bsky.embed.images#view",
          "images": [
            {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(3)/cids(4)",
              "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(3)/cids(4)",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(3)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "did:example:labeler",
            "uri": "record(5)",
            "val": "test-label",
          },
          {
            "cid": "cids(3)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "did:example:labeler",
            "uri": "record(5)",
            "val": "test-label-2",
          },
        ],
        "likeCount": 1,
        "quoteCount": 0,
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": {
            "$type": "app.bsky.embed.images",
            "images": [
              {
                "alt": "../dev-env/assets/key-landscape-small.jpg",
                "image": {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": {
                    "$link": "cids(4)",
                  },
                  "size": 4114,
                },
              },
            ],
          },
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that label_me label_me_2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(5)",
        "viewer": {
          "bookmarked": false,
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "replies": [],
      "threadContext": {
        "rootAuthorLike": "record(6)",
      },
    },
  ],
  "threadContext": {},
}
`;
